<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="hello_text">聆听内心的声音</string>
    <string name="hell0_btn_text">立即体验</string>
    <string name="login_user_edit">用户名</string>
    <string name="login_pwd_edit">密码</string>
    <string name="login_toolbar_text">登录界面</string>
    <string name="login_otherlogin_text">以游客身份进入</string>

    <string name="register_toolbar_text">注册界面</string>
    <string name="register_pwd_text">密码</string>
    <string name="register_user_text">用户名</string>
    <string name="register_pwd_edit_hint">密码必须大于8位</string>
    <string name="register_mobile_edit_hint">请输入手机号码</string>
    <string name="register_sms_edit_hint">输入短信验证码</string>
    <string name="register_sms_btn_text">发送短信</string>
    <string name="register_sign_btn_text">注册</string>
    <string name="register_user_edit_hint">请输入昵称</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_hello_ui">HelloUi</string>
</resources>
