<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.miniccmusicplayer.ui.RegisterUserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:src="@drawable/user" />

            <EditText
                android:id="@+id/user_frg_user_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:hint="@string/register_user_edit_hint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:src="@drawable/pwd" />

            <EditText
                android:id="@+id/user_frg_pwd_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:hint="@string/register_pwd_edit_hint"
                android:inputType="textPassword" />
        </LinearLayout>
        <Button
            android:id="@+id/user_frg_sign_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/holo_blue_dark"
            android:clickable="false"
            android:text="@string/register_sign_btn_text"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>

</FrameLayout>
