<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.miniccmusicplayer.ui.LoginInActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/holo_blue_dark"
        android:theme="@style/BaseTheme">
        <ImageView
            android:layout_margin="5dp"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:text="@string/login_toolbar_text"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:src="@drawable/user" />

            <EditText
                android:id="@+id/login_user_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:hint="@string/login_user_edit"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:src="@drawable/pwd" />

            <EditText
                android:id="@+id/login_pwd_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:hint="@string/login_pwd_edit"
                android:inputType="textPassword"
                android:singleLine="true" />
        </LinearLayout>

        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/holo_blue_dark"
            android:text="登录"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:typeface="serif" />

        <Button
            android:id="@+id/login_register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/holo_blue_dark"
            android:text="注册"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:typeface="serif" />
    </LinearLayout>
</LinearLayout>
